Fix view overflow and scrolling issues

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -401,3 +401,7 @@
     -fx-font-size: 35px;
     -fx-text-fill: white;
 }
+
+#viewPane {
+    -fx-background-color: derive(#1d1d1d, 20%);
+}
